feat: Preparação para agrupar musicas por genero. #10
